--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -28,7 +28,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 
     AGN are thought to be critical to galaxy evolution and perhaps the early reionisation of the Universe \citep{bosch-ramon_role_2018}, but their exact role in their host galaxies is an open question. The radiative and mechanical energy released by AGN impacts the interstellar medium (ISM) and is a key component of contemporary galaxy simulations and models \citep{morganti_many_2017}. The quenching of star formation due to AGN activity is called \defn{AGN feedback}, the idea being that the energy expelled from an AGN is returned to the ISM of the galaxy, heating the gas so it cannot condense into stars. The different impacts of radiative and mechanical energy, the location and scales within the galaxy for which star formation is quenched, and whether star formation material is ejected from the galaxy by the AGN are all open questions \citep{husemann_reality_2018}. One of our key results in \autoref{cha:rlfs} is an estimation of the mechanical energy contributed to the intergalactic medium by AGN. Solving these questions requires an understanding of AGN at both small and large scales, as well as connecting AGN to their host galaxies at other wavelengths so that redshift, emission lines, star formation rates, etc. can be determined. \autoref{cha:cross-id} describes our new method for performing such cross-identifications.
 
-    The large scales of AGN also provide insight into the larger-scale structure of the Universe. Giant radio galaxies for example (\autoref{sec:what-we-see-agn}) are difficult to identify due to their size and disconnected appearance (\autoref{sec:aggregation}), but are so large that they can be used to probe galaxy clusters \citep{banfield_radio_2016} and even the large-scale structure of the Universe \citep{reiprich_abell_2020}. Other large-scale effects seem to exist, such as the apparent alignment of radio galaxies \citep{contigiani_radio_2017,panwar_alignment_2020}, though investigation continues as to whether this effect is real or due to some unknown systematic bias. New radio surveys will reveal more radio sources than ever before, and if they can be identified, radio structures in these surveys will allow us to investigate the structure of the Universe.
+    The large scales of AGN also provide insight into the larger-scale structure of the Universe. Giant radio galaxies for example (\autoref{sec:what-we-see-agn}) are difficult to identify due to their size and disconnected appearance (\autoref{sec:aggregation}), but are so large that they can be used to probe galaxy clusters \citep{banfield_radio_2016} and even the large-scale structure of the Universe \citep{reiprich_abell_2020}. Other large-scale effects seem to exist, such as the apparent alignment of radio galaxies \citep{taylor16alignments,contigiani_radio_2017,panwar_alignment_2020}, though investigation continues as to whether this effect is real or due to some unknown systematic bias. New radio surveys will reveal more radio sources than ever before, and if they can be identified, radio structures in these surveys will allow us to investigate the structure of the Universe.
 
     The magnetic structure of AGN and their extended lobes may be probed by radio polarimetry observations \citep{anderson_broadband_2015,grant11polarised}. Through polarisation, though, extragalactic AGN can provide insight into our own Galaxy: the Faraday depth and complexity (\autoref{sec:polarisation}) of extragalactic radio sources can be used to quantify local magnetic fields. With more polarised radio sources to be revealed through upcoming wide-area polarisation surveys, the magnetic field of the Milky Way and its surrounding intergalactic medium can be better resolved. Polarimetry also allows us to determine some aspects of the structure of unresolved extragalactic sources, even though we cannot spatially see that structure: spatially extended, polarised radio sources may have different polarisation spectra to those which are spatially compact when projected onto the sky.
 
@@ -49,7 +49,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 \section{Machine learning in astronomy}
 \label{sec:ml-in-astro}
 
-    Machine learning is the process and practice of designing algorithms that automatically find and exploit useful patterns in data \citep{deisenroth_mathematics_2020}. It is best suited for scenarios where these patterns are hard to encode by hand. Typically hard-to-describe problems might include data exploration, data visualisation, or interpolation. We face a deluge of data, and our existing methods for data analysis and astronomical discovery are hard to automate due to the often complex, visual nature of much of astronomy. This is where machine learning comes in: if we can find a way to encode the processes underpinning astronomy as algorithms, we could apply them at scale. Machine learning has found much success in other fields with similar difficult-to-describe problems like image classification and outlier identification.
+    Machine learning is the process and practice of designing algorithms that automatically find and exploit useful patterns in data \citep{deisenroth_mathematics_2020}. It is best suited for scenarios where these patterns are hard to encode by hand. Typically hard-to-describe problems might include data exploration, data visualisation, or interpolation. We face a deluge of data, and our existing methods for data analysis and astronomical discovery are hard to automate due to the often complex, imagery-based nature of much of astronomy. This is where machine learning comes in: if we can find a way to encode the processes underpinning astronomy as algorithms, we could apply them at scale. Machine learning has found much success in other fields with similar difficult-to-describe problems like image classification and outlier identification.
 
     From the other direction, machine learning finds interesting and unique applications in radio astronomy. Radio images are usually quite different from images in the typical image analysis problems faced in computer science. Standard assumptions are frequently broken: noise is correlated across the image, objects can be different shapes when viewed at different wavelengths, and the number of colours in an image may be in the hundreds. Data points are spatially located and can be close together or far apart in ways that are not solely based on how they look or behave. We often do not have the option of obtaining more data, sometimes because it is prohibitively expensive (e.g. to undertake a new survey) and sometimes because it simply does not exist (as we only have one Universe to look at or because the event is a transient one-off). The burgeoning field of astroinformatics promises to prove interesting.
 
@@ -58,7 +58,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 
     Current methods of identifying radio sources in wide-area radio surveys work best for compact, isolated objects. As resolution and depth of radio surveys increases in the lead-up to the SKA, these limitations are becoming more apparent: resolution increases apparent complexity and depth increases the number of radio sources visible in any given patch of sky.
 
-    Source identification is critical for analysis of radio sources in large-scale surveys whether one is interested in individual sources or their bulk properties. Without solving issues like cross-identification and Faraday complexity we will not be able to make full use of the SKA when it arrives. As we will discuss in \autoref{sec:xid}, cross-identification of radio sources with their counterparts in infrared or optical is key to understanding these sources. Many galaxy properties can only be derived from observations of the galaxy, the stellar component of which can be traced by emission in the infrared and optical. This can yield properties including distance, star formation rate, and even mass of the central black hole powering the radio source itself. We develop an automated machine learning method for cross-identification in \autoref{cha:cross-id} and apply it to obtain physical results in \autoref{cha:rlfs}.
+    Source identification is critical for analysis of radio sources in large-scale surveys whether one is interested in individual sources or their bulk properties. Without solving issues like cross-identification and Faraday complexity we will not be able to make full use of the SKA when it arrives. As we will discuss in \autoref{sec:xid}, cross-identification of radio sources with their counterparts in infrared or optical is key to understanding these sources. Many radio galaxy properties can only be derived from non-radio observations of the galaxy, the stellar component of which can be traced by emission in the infrared and optical. This can yield properties including distance, star formation rate, and even mass of the central black hole powering the radio source itself. We develop an automated machine learning method for cross-identification in \autoref{cha:cross-id} and apply it to obtain physical results in \autoref{cha:rlfs}.
 
     Bulk analysis of polarised sources greatly benefits from being able to assess their Faraday complexity. The most important application is perhaps in the development of so-called \defn{rotation measure grids}, which help characterise the magnetic field of the Milky Way and surrounding intergalactic medium. Without knowing which sources are complex and which are not, we cannot estimate the grid reliably. A fast way to estimate Faraday complexity also allows us to quickly determine which sources may need following up, either with more expensive algorithms or further observations. \autoref{cha:faraday} details our development of an automated Faraday complexity classifier.
 
