--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -3273,3 +3273,15 @@ year = {2019}
   pages     = {arXiv:2003.10322v1 [astro-ph.GA]},
 }
 
+
+@ARTICLE{taylor16alignments,
+       author = {{Taylor}, A.~R. and {Jagannathan}, P.},
+        title = "Alignments of radio galaxies in deep radio imaging of {ELAIS N1}",
+      journal = {\mnras},
+         year = 2016,
+       volume = {459},
+       number = {1},
+        pages = {L36--L40},
+          doi = {10.1093/mnrasl/slw038},
+}
+
